--- a/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxss
+++ b/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxss
@@ -292,3 +292,9 @@ page {
     background: salmon;
     opacity: 0;
 }
+
+.button{
+    width:30vw;
+    background-color: #fff;
+    border-radius: 3vw;
+}
