--- a/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxss
+++ b/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxss
@@ -65,6 +65,7 @@ page {
     overflow: hidden;
     background: #fff;
     margin-right: 16rpx;
+    border-radius: 2vw;
 }
 
 .prod-item .item-cont .prod-pic image {
