--- a/front-end/mall4m/pages/submit-order/submit-order.wxss
+++ b/front-end/mall4m/pages/submit-order/submit-order.wxss
@@ -174,6 +174,7 @@ page {
   overflow: hidden;
   background: #fff;
   margin-right: 16rpx;
+  border-radius: 2vw;
 }
 
 .prod-item .item-cont .prod-pic image {
