--- a/front-end/mall4m/pages/index/index.wxss
+++ b/front-end/mall4m/pages/index/index.wxss
@@ -467,3 +467,20 @@ line-height:44rpx;
   border-radius: 50%; */
   padding: 8rpx;
 }
+.dialogMask{
+    width:100vw; 
+    height:100vh; 
+    position:fixed; 
+    z-index: 1000; 
+    top:0; 
+    left:0;
+    background:rgba(0,0,0,.6);
+}
+.dialogInfo{
+    width:70vw; 
+    border-radius: 3vw; 
+    overflow-x: hidden;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+}
